About Us section update

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
           <div class="col-lg-8 d-flex flex-column justify-contents-center" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0">
-              <h3>CEO Message</h3><br>
+              <h3>About Us</h3><br>
               <p>
                 Dear Creative People, welcome to CPROCOM.
               </p>
@@ -125,8 +125,8 @@
                 We are eager to start collaborating with you, exploring opportunities that will lead us all to reach our truly phenomenal achievements.
               </p>
               <p>
-                Sincerely,
-                Dr. Emilia Bassar
+                Sincerely, <br>
+                Dr. Emilia Bassar <br>
                 Founder and CEO
               </p>
             </div>
