--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
           <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a class="nav-link scrollto" href="#about">About CPROCOM</a></li>
-              <li><a class="nav-link scrollto" href="#team">Our Values</a></li>
-              <li><a class="nav-link scrollto" href="#testimonials">Services</a></li>
-              <li><a class="nav-link scrollto" href="#testimonials">The Team</a></li>
-              <li><a class="nav-link scrollto" href="#testimonials">Our Clients</a></li>
+              <li><a class="nav-link scrollto" href="#testimonials">Our Values</a></li>
+              <li><a class="nav-link scrollto" href="#features">Services</a></li>
+              <li><a class="nav-link scrollto" href="#">The Team</a></li>
+              <li><a class="nav-link scrollto" href="#clients">Our Clients</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a class="nav-link scrollto" href="#about">Training & Consulting</a></li>
-              <li><a class="nav-link scrollto" href="#team">Green & Social Movement</a></li>
-              <li><a class="nav-link scrollto" href="#testimonials">Event Management</a></li>
-              <li><a class="nav-link scrollto" href="#testimonials">Multimedia Production</a></li>
+              <li><a class="nav-link scrollto" href="#tab-1">Training & Consulting</a></li>
+              <li><a class="nav-link scrollto" href="#tab-4">Green & Social Movement</a></li>
+              <li><a class="nav-link scrollto" href="#tab-2">Event Management</a></li>
+              <li><a class="nav-link scrollto" href="#tab-3">Multimedia Production</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto " href="#portfolio">News</a></li>
+          <li><a class="nav-link scrollto " href="#">News</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
