--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li class="dropdown"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#about"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a class="nav-link scrollto" href="#about">About CPROCOM</a></li>
               <li><a class="nav-link scrollto" href="#testimonials">Our Values</a></li>
@@ -50,7 +50,7 @@
               <li><a class="nav-link scrollto" href="#clients">Our Clients</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#features"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a class="nav-link scrollto" href="#tab-1">Training & Consulting</a></li>
               <li><a class="nav-link scrollto" href="#tab-4">Green & Social Movement</a></li>
